--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-amqp")
     runtime('org.postgresql:postgresql')
 	//runtime('com.h2database:h2')
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.0.1'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.0.2'
 
 
 }
