--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile("org.springframework.boot:spring-boot-starter-amqp")
+	 compile("org.springframework.boot:spring-boot-starter-actuator")
     runtime('org.postgresql:postgresql')
 	//runtime('com.h2database:h2')
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.0.1'
